--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codeeditor",
   "widgetName": "CodeEditor",
   "version": "1.0.0",
-  "description": "Embeddable code editor widget, powered by Ace editor.",
+  "description": "Ace code editor, as a Mendix pluggable widget.",
   "copyright": "© Mendix Technology BV 2022. All rights reserved.",
   "author": "Carter Moorse",
   "engines": {
@@ -14,7 +14,7 @@
     "mendixHost": "http://localhost:8080",
     "developmentPort": 3000
   },
-  "packagePath": "mendix",
+  "packagePath": "carterm",
   "scripts": {
     "start": "pluggable-widgets-tools start:server",
     "dev": "pluggable-widgets-tools start:web",
