--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "release": "pluggable-widgets-tools release:web"
   },
   "devDependencies": {
-    "@mendix/pluggable-widgets-tools": "^10.5.0",
-    "@types/big.js": "^6.0.2"
+    "@mendix/pluggable-widgets-tools": "^10.15.0",
+    "@types/big.js": "^6.0.2",
+    "glob": "^11.0.0"
   },
   "dependencies": {
-    "ace-builds": "^1.35.0",
-    "classnames": "^2.2.6",
+    "ace-builds": "^1.36.2",
+    "classnames": "^2.5.1",
     "emmet": "^2.4.11",
-    "glob": "^11.0.0",
     "react-ace": "^12.0.0"
   },
   "resolutions": {
