--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codeeditor",
   "widgetName": "CodeEditor",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Ace code editor, as a Mendix pluggable widget.",
   "copyright": "© Mendix Technology BV 2022. All rights reserved.",
   "author": "Carter Moorse",
@@ -27,9 +27,11 @@
   "devDependencies": {
     "@mendix/pluggable-widgets-tools": "^10.15.0",
     "@types/big.js": "^6.0.2",
-    "glob": "^11.0.0"
+    "glob": "^11.0.0",
+    "rollup-plugin-copy": "^3.5.0"
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^6.0.2",
     "ace-builds": "^1.36.2",
     "classnames": "^2.5.1",
     "emmet": "^2.4.11",
